--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
-    "publish-beta": "yarn publish --access public --tag beta"
+    "publish-beta": "yarn cache clean --force && yarn version && yarn publish --access public --tag beta"
   },
   "keywords": [
     "react",
