--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pofo/focus-trap",
-  "version": "0.0.1-beta.2",
+  "version": "0.0.1-beta.3",
   "description": "React Focus Trap Hook for Refs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
-    "publish-beta": "yarn cache clean --force && yarn version && yarn publish --access public --tag beta"
+    "publish-beta": "yarn version && yarn publish --access public --tag beta"
   },
   "keywords": [
     "react",
